<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ed3d21"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        android:elevation="4dp"
        app:elevation="4dp"
        app:titleTextColor="#ffffff"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        app:title="About" />

    <TextView
        android:id="@+id/app_names"
        android:layout_below="@id/toolbar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/quote"
        android:layout_below="@id/app_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/quote"
        android:lineSpacingExtra="2dp"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_below="@id/quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:text="@string/by_connect_inc" />

</RelativeLayout>