<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#ed3d21"
        android:minHeight="?attr/actionBarSize"
        android:elevation="4dp"
        app:elevation="4dp"
        android:theme="@style/ToolbarTheme"
        app:titleTextColor="#ffffff"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        app:title="Help" />


    <androidx.cardview.widget.CardView
        android:id="@+id/buyquote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@id/toolbar3"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:elevation="1dp"
        app:cardCornerRadius="4dp"
        android:padding="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="normal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/askme"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:background="#EEE0E0"
                android:layout_alignParentTop="true"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/here_are_some_tips_on_how_to_use_fuoye_gp"/>

            <LinearLayout
                android:layout_below="@id/askme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_marginBottom="4dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image1"
                        android:layout_width="40dp"
                        android:padding="2dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="0dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_done_black_24dp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_toEndOf="@id/profile_image1"
                        android:paddingTop="0dp"
                        android:paddingBottom="0dp"
                        android:layout_marginStart="6dp"
                        android:paddingStart="0dp"
                        android:paddingEnd="8dp"
                        android:textSize="15sp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/two" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="24dp"
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image11"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="0dp"
                        android:padding="2dp"
                        android:layout_marginTop="0dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_done_all_black_24dp" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_toEndOf="@id/profile_image11"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_marginStart="6dp"
                        android:paddingStart="0dp"
                        android:paddingEnd="8dp"
                        android:textSize="15sp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/three" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buyquote"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:layout_centerInParent="false"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/activatbtn"
            android:text="Email"
            android:gravity="center"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/whatsapp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@drawable/activatbtn1"
            android:elevation="0dp"
            android:gravity="center"
            app:elevation="4dp"
            android:text="WhatsApp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>